Tidy up reviews page and fix horizontal scrolling (#5643)

--- a/enterprise/app/review/review.css
+++ b/enterprise/app/review/review.css
@@ -1,58 +1,62 @@
 .reviews {
-  padding: 0 32px 32px 32px;
+  padding: 0;
+  display: grid;
+  width: 100%;
+  overflow: hidden;
+  grid-template-columns:
+    max-content /* PR */
+    max-content /* Author */
+    max-content /* Status */
+    max-content /* Updated */
+    1fr /* Reviewers */
+    max-content /* Size */
+    2fr /* Description */;
 }
 
 .reviews .reviews-title {
   font-weight: 700;
   padding: 32px 0 8px 0;
-  font-size: 1.2em;
-  white-space: nowrap;
-  width: 0px;
+  font-size: 20px;
+  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .reviews .change-count {
   margin-left: 8px;
   font-weight: 500;
-  font-size: 0.8em;
+  font-size: 16px;
 }
 
-.reviews .reviews-section {
-  margin-bottom: 16px;
-}
-
-.reviews .pr-list {
-  display: table;
+.reviews .reviews-title,
+.reviews .empty-state {
+  width: 100%;
+  grid-column: 1 / -1;
+  padding: 0 16px;
 }
 
 .reviews .pr {
-  display: table-row;
-  border-radius: 4px;
-  white-space: nowrap;
+  display: contents;
 }
 
-.reviews .pr:nth-child(odd) > div {
+.reviews .pr-rows {
+  display: contents;
+}
+
+.reviews .pr-rows .pr:nth-child(odd) > div {
   background-color: #f0f0f0;
-}
-.reviews .pr > div:first-child {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  padding-left: 16px;
-}
-
-.reviews .pr > div:last-child {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  padding-right: 16px;
 }
 
 .reviews .pr-header {
   color: #666;
+  display: contents;
 }
 
 .reviews .pr > div {
-  display: table-cell;
   padding: 6px 8px;
-  vertical-align: middle;
+}
+
+.reviews .pr > div:first-child {
+  padding-left: 16px;
 }
 
 .reviews .pr-status {
@@ -79,7 +83,6 @@
   width: 16px;
   height: 16px;
   border-radius: 4px;
-  flex-shrink: 0;
 }
 
 .reviews .pr-status:before {
@@ -91,8 +94,6 @@
 }
 
 .reviews .empty-state {
-  padding-left: 16px;
-  white-space: nowrap;
+  margin-top: 8px;
   color: #666;
-  width: 0;
 }
